Move figures to end, correct tikz color
tikz colour changes when
\usepackage[nolists, nomarkers]{endfloat}
is used. Had to change shade of blue used.

--- a/tim liz paper draft.tex
+++ b/tim liz paper draft.tex
@@ -14,7 +14,7 @@
 
 
 
-%\usepackage[nolists, nomarkers]{endfloat}
+\usepackage[nolists, nomarkers]{endfloat}
 \linenumbers
 \doublespacing
 
@@ -78,7 +78,7 @@ marcus.rowcliffe@ioz.ac.uk
 \clearpage
 
 
-%max word count 250 words. 
+%max word count 350 words. - current count 345
 
 \section{Abstract}
 \subsection*{1:}   It is currently difficult to estimate population densities using data collected using remote sensors. Current methods require either individual identification in order to apply capture recapture analysis, or mobile sensors and static animals together with known distance between animal and sensor on detection in order to apply distance analysis. An approach without these requirements, `ideal gas' models, have so far only been extended for camera traps with a small range of detection angles and acoustically detected animals with directional calls currently do not fit the assumptions of the random encounter model (REM) as developed for camera trapping.
@@ -89,7 +89,7 @@ marcus.rowcliffe@ioz.ac.uk
 
 \subsection*{4:} We conclude that these models provide an effective method to estimate animal density from sensor count data. We anticipate that surveys of acoustically detected species, or camera trap surveys, which before could only give relative metrics of population size will now be able to estimate population density controlling for detectability.   As sensors such as camera traps and acoustic detectors become cheaper and more practical these models will be increasingly useful for monitoring animal populations across broad spatial, temporal or taxonomic scales.
 
-\subsection{Keywords}
+\subsection{Keywords} %max keywords/phrase 10 - current 3
 Acoustic detection, density estimation, bat detector.
 
 \section{Introduction}
