--- a/tikzREMmethods.tex
+++ b/tikzREMmethods.tex
@@ -9,7 +9,7 @@
 \def\arrowSz{0.5}
 \def\angRad{0.6}
 \definecolor{arrowCol}{rgb}{0.5,0.5,0.5}
-\definecolor{sensCol}{rgb}{0,0,1}
+\definecolor{sensCol}{rgb}{0.6, 0.73, 0.89}
 \definecolor{callCol}{rgb}{1,0,0}
 \definecolor{profCol}{rgb}{0.8,0,0}
 \definecolor{profText}{rgb}{0.55,0,0}
