1st 100 words in figure captions are descriptive

--- a/tim liz paper draft.tex
+++ b/tim liz paper draft.tex
@@ -318,14 +318,14 @@ We ran simulations that broke the assumptions of model in order to see whether t
 	\includegraphics[width=1\textwidth]{imgs/ResultsPerch.pdf}
           \caption{Proportion of time spent stationary}
           \label{f:Perch}
-	\caption{Discrepancy between known simulation density and estimated density when animals spend increasing proportion of time stationary where:  $r = $\SI{100}{\meter}; $T = $\SI{150}{\day}; $v = $ \SI{40}{\kilo\meter\per\day}; $D=$\SI{70}{\animals\per\kilo\meter\squared}; and with angles varying between models.  } 
+	\caption{Distribution of model error when simulated animals spend increasing proportion of time stationary where:  $r = $\SI{100}{\meter}; $T = $\SI{150}{\day}; $v = $ \SI{40}{\kilo\meter\per\day}; $D=$\SI{70}{\animals\per\kilo\meter\squared}; and with angles varying between models.  } 
 \end{figure}
 \begin{figure}[t]
                 \centering
 		\includegraphics[width=1\textwidth]{imgs/ResultsTort.pdf}
                 \caption{Angle of correlated walk}
                 \label{f:Tort}
-	\caption{Discrepancy between known simulation density and estimated density when they move with different types of correlated walk where:  $r = $\SI{10}{\meter}; $T = $\SI{352}{\day}; $v = $ \SI{40}{\kilo\meter\per\day}; $D=$\SI{70}{\animals\per\kilo\meter\squared}; and with angles varying between models. } 
+	\caption{Distribution of model error when simulated animals move with different types of correlated walk where:  $r = $\SI{10}{\meter}; $T = $\SI{352}{\day}; $v = $ \SI{40}{\kilo\meter\per\day}; $D=$\SI{70}{\animals\per\kilo\meter\squared}; and with angles varying between models. } 
 \end{figure}
 
                   
